--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ html {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    min-height: 100vh;
     background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(./images/background-calculator.jpg);
     background-size: cover;
     background-position: center;
@@ -26,6 +26,7 @@ html {
     width: 300px;
     background-color: #fff;
     border-radius: 10px;
+    margin: 50px 0;
     padding: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     background: rgba(255, 255, 255, 0.2);
